[package]
name = "fil_hello_world_actor"
version = "0.1.0"
edition = "2021"

[dependencies]
cid = { version = "0.8.4", default-features = false }
multihash = { version = "0.16.2", default-features = false }
fil_fungible_token = { git = "https://github.com/helix-onchain/filecoin", rev = "627a20941773faccba76d9af1d4eb591f553c573" }
fvm_sdk = { version = "1.0.0" }
fvm_shared = { version = "0.8.0" }
fvm_ipld_blockstore = "0.1.1"
fvm_ipld_encoding = "0.2.1"
serde = { version = "1.0.136", features = ["derive"] }
serde_tuple = "0.5"
anyhow = "1.0.56"

[dev-dependencies]
fvm = { version = "1.0.0" }
fvm_sdk = { version = "1.0.0" }
libsecp256k1 = { version = "0.7" }
rand = "0.8"
rand_chacha = "0.3"
anyhow = "1.0.52"
wasmtime = "0.35.2"

[build-dependencies]
wasm-builder = "3.0.1"
wasmtime = "0.35.2"